fix text overflow issue with blurting

--- a/src/app/study/[id]/methods/blurting/blurting.module.css
+++ b/src/app/study/[id]/methods/blurting/blurting.module.css
@@ -40,6 +40,7 @@
 
 .blurt p {
     text-overflow: ellipsis;
+    white-space: nowrap;
     overflow-x: hidden;
 
     color: var(--text-color-light);
